Fix text alignment

--- a/src/Days/DayCard.module.css
+++ b/src/Days/DayCard.module.css
@@ -6,7 +6,7 @@
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 10px;
 
-  padding: 15px 25px;
+  padding-top: 15px;
 
   color: #fff;
 
